// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostCell Rendering draw all the cell data 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "maxHeight": 55,
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/bruno_mart/128.jpg",
        }
      }
      style={
        Object {
          "aspectRatio": 1,
          "borderRadius": 27.5,
          "height": "100%",
          "resizeMode": "contain",
        }
      }
    />
    <View>
      <Text
        style={
          Object {
            "color": "#151522",
            "fontFamily": "SFProDisplay-Bold",
            "fontSize": 13,
            "marginLeft": 15,
          }
        }
      >
        Charles Hickle
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#151522",
              "fontFamily": "SFProDisplay-Bold",
              "fontSize": 13,
              "marginLeft": 15,
            },
            Object {
              "color": "#999999",
            },
          ]
        }
      >
        9 days ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={3}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": "SFProDisplay-Light",
          "fontSize": 16,
        }
      }
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </Text>
    <Image
      source={
        Object {
          "uri": "https://images.unsplash.com/photo-1582043725042-f3d1873eeadf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
        }
      }
      style={
        Object {
          "borderRadius": 5,
          "flex": 2,
          "height": undefined,
          "marginTop": 20,
          "resizeMode": "cover",
          "width": undefined,
        }
      }
    />
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 28,
          "marginTop": 14,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "height": "100%",
              "marginRight": 15,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/images/heart.png",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "height": "100%",
              "resizeMode": "contain",
              "width": undefined,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#999999",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 15,
                "marginLeft": 5,
              },
              undefined,
            ]
          }
        >
          68
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "height": "100%",
              "marginRight": 15,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/images/message-circle.png",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "height": "100%",
              "resizeMode": "contain",
              "width": undefined,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#999999",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 15,
                "marginLeft": 5,
              },
              undefined,
            ]
          }
        >
          43
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`PostCell Rendering draw an empty cell 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`PostCell Rendering draw the cell with description only 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={3}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": "SFProDisplay-Light",
          "fontSize": 16,
        }
      }
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`PostCell Rendering draw the cell with image only 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://images.unsplash.com/photo-1582043725042-f3d1873eeadf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80",
        }
      }
      style={
        Object {
          "borderRadius": 5,
          "flex": 2,
          "height": undefined,
          "marginTop": 20,
          "resizeMode": "cover",
          "width": undefined,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`PostCell Rendering draw the cell with likes and comms only 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "height": 28,
          "marginTop": 14,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "height": "100%",
              "marginRight": 15,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/images/heart.png",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "height": "100%",
              "resizeMode": "contain",
              "width": undefined,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#999999",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 15,
                "marginLeft": 5,
              },
              undefined,
            ]
          }
        >
          68
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "height": "100%",
              "marginRight": 15,
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../App/assets/images/message-circle.png",
            }
          }
          style={
            Object {
              "aspectRatio": 1,
              "height": "100%",
              "resizeMode": "contain",
              "width": undefined,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#999999",
                "fontFamily": "SFProDisplay-Regular",
                "fontSize": 15,
                "marginLeft": 5,
              },
              undefined,
            ]
          }
        >
          43
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`PostCell Rendering draw the cell with user only 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flex": 1,
      "height": 360,
      "marginVertical": 15,
      "opacity": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "maxHeight": 55,
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/bruno_mart/128.jpg",
        }
      }
      style={
        Object {
          "aspectRatio": 1,
          "borderRadius": 27.5,
          "height": "100%",
          "resizeMode": "contain",
        }
      }
    />
    <View>
      <Text
        style={
          Object {
            "color": "#151522",
            "fontFamily": "SFProDisplay-Bold",
            "fontSize": 13,
            "marginLeft": 15,
          }
        }
      >
        Charles Hickle
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 53,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "#E4E4E499",
          "height": 1,
          "width": "80%",
        },
        Object {
          "marginTop": 30,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;
